; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_sock.c_hci_send_to_channel.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/extr_hci_sock.c_hci_send_to_channel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.sk_buff = type { i32 }
%struct.sock = type { i32 }

@hci_sk_list = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hci_send_to_channel(i16 zeroext %0, %struct.sk_buff* %1, i32 %2, %struct.sock* %3) #0 {
  %5 = alloca i16, align 2
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.sock*, align 8
  store i16 %0, i16* %5, align 2
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.sock* %3, %struct.sock** %8, align 8
  %9 = call i32 @read_lock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hci_sk_list, i32 0, i32 0))
  %10 = load i16, i16* %5, align 2
  %11 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.sock*, %struct.sock** %8, align 8
  %14 = call i32 @__hci_send_to_channel(i16 zeroext %10, %struct.sk_buff* %11, i32 %12, %struct.sock* %13)
  %15 = call i32 @read_unlock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @hci_sk_list, i32 0, i32 0))
  ret void
}

declare dso_local i32 @read_lock(i32*) #1

declare dso_local i32 @__hci_send_to_channel(i16 zeroext, %struct.sk_buff*, i32, %struct.sock*) #1

declare dso_local i32 @read_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
